[package]
name = "warthog_rs"
version = "0.1.0"
edition = "2021"
description = "Warthog rust library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elliptic-curve = "0.13.8"
hex = "0.4.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
ripemd = "0.1.3"
secp256k1 = "0.29.0"
sha2 = "0.10.8"
url = "2.5.0"
