[package]
name = "warthog_rs"
version = "0.1.4"
edition = "2021"
description = "Warthog rust library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elliptic-curve = "0.13.8"
hex = "0.4.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
ripemd = "0.1.3"
secp256k1 = { version = "0.29.0", features = ["default", "recovery"] }
sha2 = "0.10.8"
url = "2.5.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
